terraform/imagebuild/module_native/aws_security_group.tf
resource "aws_security_group" "main" {
  name        = "${var.name}-${data.aws_region.current.name}-${var.env_name}-allow-all-out"
  description = "Allow SSH, HTTP, HTTPS outbound traffic"
  vpc_id      = var.vpc_id

  egress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port = 22
    to_port   = 22
    protocol  = "tcp"
    self      = "true"
  }
}
